--- a/app/styles/02-Elements/_Inputs.scss
+++ b/app/styles/02-Elements/_Inputs.scss
@@ -35,224 +35,226 @@ $box-background-inactive: $grey-light;
     }
 }
 
-.input-wrap {
-    position: relative;
-    display: block;
-    float: left;
-    width: 100%;
-    label {
-        @include font(p);
-        margin: 0.8rem 0 0.3rem;
+#typeSettings {
+    .input-wrap {
+        position: relative;
         display: block;
-    }
-    &__half {
-        width: 49%;
-        margin-right: 2%;
-        &--last {
-            Margin-right: 0;
-        }
-    }
-    &__actions {
-        @extend .input-wrap;
-        .action {
-            @extend .button;
-        }
-    }
-    &__text {
-        @extend .input-wrap;
-        input {
-            @extend %input;
-        }
-    }
-    &__number {
-        @extend .input-wrap;
-        input {
-            @extend %input;
-        }
-    }
-    &__email {
-        @extend .input-wrap;
-        input {
-            @extend %input;
-        }
-    }
-    &__textarea {
-        @extend .input-wrap;
-        textarea {
-            @extend %input;
-            resize: none;
-            min-height: 160px;
-        }
-    }
-    &__select {
-        @extend .input-wrap;
-        select {
-            @extend %input;
-        }
-        &:after {
-            @include pseudo;
-            width: 0;
-            height: 0;
-            border-style: solid;
-            border-width: 8px 6px 0 6px;
-            border-color: $active-input-border-colour transparent transparent transparent;
-            bottom: 3.6rem;
-            right: 1.5%;
-        }
-    }
-    &__checkbox {
-        @extend .input-wrap;
+        float: left;
+        width: 100%;
         label {
+            @include font(p);
+            margin: 0.8rem 0 0.3rem;
+            display: block;
+        }
+        &__half {
+            width: 49%;
+            margin-right: 2%;
+            &--last {
+                Margin-right: 0;
+            }
+        }
+        &__actions {
+            @extend .input-wrap;
+            .action {
+                @extend .button;
+            }
+        }
+        &__text {
+            @extend .input-wrap;
+            input {
+                @extend %input;
+            }
+        }
+        &__number {
+            @extend .input-wrap;
+            input {
+                @extend %input;
+            }
+        }
+        &__email {
+            @extend .input-wrap;
+            input {
+                @extend %input;
+            }
+        }
+        &__textarea {
+            @extend .input-wrap;
+            textarea {
+                @extend %input;
+                resize: none;
+                min-height: 160px;
+            }
+        }
+        &__select {
+            @extend .input-wrap;
+            select {
+                @extend %input;
+            }
+            &:after {
+                @include pseudo;
+                width: 0;
+                height: 0;
+                border-style: solid;
+                border-width: 8px 6px 0 6px;
+                border-color: $active-input-border-colour transparent transparent transparent;
+                bottom: 3.6rem;
+                right: 1.5%;
+            }
+        }
+        &__checkbox {
+            @extend .input-wrap;
+            label {
 
+            }
         }
     }
-}
 
-/*------------------------------------------------------------------
-Checkboxes and radio box styles
-------------------------------------------------------------------*/
+    /*------------------------------------------------------------------
+    Checkboxes and radio box styles
+    ------------------------------------------------------------------*/
 
-[type="radio"]:not(:checked),
-[type="radio"]:checked {
-    position: absolute;
-    left: -9999px;
-}
+    [type="radio"]:not(:checked),
+    [type="radio"]:checked {
+        position: absolute;
+        left: -9999px;
+    }
 
-[type="radio"]:not(:checked) + label,
-[type="radio"]:checked + label {
-    position: relative;
-    padding-left: 30px !important;
-    cursor: pointer;
-}
+    [type="radio"]:not(:checked) + label,
+    [type="radio"]:checked + label {
+        position: relative;
+        padding-left: 30px !important;
+        cursor: pointer;
+    }
 
-[type="radio"]:not(:checked) + label:before,
-[type="radio"]:checked + label:before,
-[type="radio"]:not(:checked) + label:after,
-[type="radio"]:checked + label:after {
-    content: '';
-    position: absolute;
-}
+    [type="radio"]:not(:checked) + label:before,
+    [type="radio"]:checked + label:before,
+    [type="radio"]:not(:checked) + label:after,
+    [type="radio"]:checked + label:after {
+        content: '';
+        position: absolute;
+    }
 
-[type="radio"]:not(:checked) + label:before,
-[type="radio"]:checked + label:before {
-    left: 0;
-    top: -1px;
-    width: 20px;
-    height: 20px;
-    background: $box-handle;
-    border-radius: 10px;
-    transition: background-color .2s;
-}
+    [type="radio"]:not(:checked) + label:before,
+    [type="radio"]:checked + label:before {
+        left: 0;
+        top: -1px;
+        width: 20px;
+        height: 20px;
+        background: $box-handle;
+        border-radius: 10px;
+        transition: background-color .2s;
+    }
 
-[type="radio"]:not(:checked) + label:after {
-    content: "";
-    width: 14px;
-    height: 14px;
-    background: $box-background-inactive;
-    display: block;
-    position: absolute;
-    left: 3px;
-    top: 2px;
-    margin: 0;
-    border-radius: 15px;
-    transition: all .2s;
-}
+    [type="radio"]:not(:checked) + label:after {
+        content: "";
+        width: 14px;
+        height: 14px;
+        background: $box-background-inactive;
+        display: block;
+        position: absolute;
+        left: 3px;
+        top: 2px;
+        margin: 0;
+        border-radius: 15px;
+        transition: all .2s;
+    }
 
-[type="radio"]:checked + label:after {
-    content: "";
-    width: 14px;
-    height: 14px;
-    display: block;
-    position: absolute;
-    left: 3px;
-    top: 2px;
-    margin: 0;
-    border-radius: 15px;
-}
+    [type="radio"]:checked + label:after {
+        content: "";
+        width: 14px;
+        height: 14px;
+        display: block;
+        position: absolute;
+        left: 3px;
+        top: 2px;
+        margin: 0;
+        border-radius: 15px;
+    }
 
-[type="checkbox"]:not(:checked),
-[type="checkbox"]:checked {
-    position: absolute;
-    left: -9999px;
-}
+    [type="checkbox"]:not(:checked),
+    [type="checkbox"]:checked {
+        position: absolute;
+        left: -9999px;
+    }
 
-[type="checkbox"]:not(:checked) + label,
-[type="checkbox"]:checked + label {
-    position: relative;
-    padding-left: 45px;
-    cursor: pointer;
-    margin: 0.6rem 0 2rem;
-    user-select: none;
-}
+    [type="checkbox"]:not(:checked) + label,
+    [type="checkbox"]:checked + label {
+        position: relative;
+        padding-left: 45px;
+        cursor: pointer;
+        margin: 0.6rem 0 2rem;
+        user-select: none;
+    }
 
-[type="checkbox"]:not(:checked) + label:before,
-[type="checkbox"]:checked + label:before,
-[type="checkbox"]:not(:checked) + label:after,
-[type="checkbox"]:checked + label:after {
-    content: '';
-    position: absolute;
-}
+    [type="checkbox"]:not(:checked) + label:before,
+    [type="checkbox"]:checked + label:before,
+    [type="checkbox"]:not(:checked) + label:after,
+    [type="checkbox"]:checked + label:after {
+        content: '';
+        position: absolute;
+    }
 
-[type="checkbox"]:not(:checked) + label:before,
-[type="checkbox"]:checked + label:before {
-    left: 0;
-    top: -1px;
-    width: 32px;
-    height: 20px;
-    background: $box-background-inactive;
-    border-radius: 10px;
-    transition: background-color .2s;
+    [type="checkbox"]:not(:checked) + label:before,
+    [type="checkbox"]:checked + label:before {
+        left: 0;
+        top: -1px;
+        width: 32px;
+        height: 20px;
+        background: $box-background-inactive;
+        border-radius: 10px;
+        transition: background-color .2s;
 
-}
+    }
 
-[type="checkbox"]:not(:checked) + label:after,
-[type="checkbox"]:checked + label:after {
-    width: 16px;
-    height: 16px;
-    transition: all 0.2s;
-    border-radius: 50%;
-    background: $box-handle;
-    top: 1px;
-    left: 3px;
-}
+    [type="checkbox"]:not(:checked) + label:after,
+    [type="checkbox"]:checked + label:after {
+        width: 16px;
+        height: 16px;
+        transition: all 0.2s;
+        border-radius: 50%;
+        background: $box-handle;
+        top: 1px;
+        left: 3px;
+    }
 
-[type="checkbox"]:checked + label:before {
-    background: $box-background-active;
-}
+    [type="checkbox"]:checked + label:before {
+        background: $box-background-active;
+    }
 
-[type="checkbox"]:checked + label:after {
-    top: 1px;
-    left: 14px;
-}
+    [type="checkbox"]:checked + label:after {
+        top: 1px;
+        left: 14px;
+    }
 
-[type="checkbox"]:checked + label .ui,
-[type="checkbox"]:not(:checked) + label .ui:before,
-[type="checkbox"]:checked + label .ui:after {
-    position: absolute;
-    left: 6px;
-    width: 32px;
-    border-radius: 8px;
-    font-size: 14px;
-    font-weight: bold;
-    line-height: 22px;
-    transition: all .2s;
-}
+    [type="checkbox"]:checked + label .ui,
+    [type="checkbox"]:not(:checked) + label .ui:before,
+    [type="checkbox"]:checked + label .ui:after {
+        position: absolute;
+        left: 6px;
+        width: 32px;
+        border-radius: 8px;
+        font-size: 14px;
+        font-weight: bold;
+        line-height: 22px;
+        transition: all .2s;
+    }
 
-[type="checkbox"]:not(:checked) + label .ui:before {
-    content: "no";
-    left: 32px
-}
+    [type="checkbox"]:not(:checked) + label .ui:before {
+        content: "no";
+        left: 32px
+    }
 
-[type="checkbox"]:checked + label .ui:after {
-    content: "yes";
-}
+    [type="checkbox"]:checked + label .ui:after {
+        content: "yes";
+    }
 
-[type="checkbox"]:focus + label:before {
-    box-sizing: border-box;
-    margin-top: 0;
-}
+    [type="checkbox"]:focus + label:before {
+        box-sizing: border-box;
+        margin-top: 0;
+    }
 
-[type="checkbox"]:active + label:before {
-    box-sizing: border-box;
-    margin-top: 0;
+    [type="checkbox"]:active + label:before {
+        box-sizing: border-box;
+        margin-top: 0;
+    }
 }
