Updated package and now have all of the google fgonts

--- a/app/styles/00-Utilities/_03_Type.scss
+++ b/app/styles/00-Utilities/_03_Type.scss
@@ -94,21 +94,12 @@ Tags
 ------------------------------------------------------------------*/
 
 html, body {
-    font-size: $base * 0.8;
-    @include media($md) {
-        font-size: $base * 0.85;
-    }
-    @include media($lg) {
-        font-size: $base * 0.9;
-    }
-    @include media($xl) {
-        font-size: $base;
-    }
-    @include heading;
-    * {
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-    }
+    font-size: $base;
+}
+
+html *, body * {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 #typeSettings {
