--- a/app/styles/00-Utilities/_01-Mixins.scss
+++ b/app/styles/00-Utilities/_01-Mixins.scss
@@ -159,19 +159,21 @@ Background Cover
 Embed Responsivley
 ------------------------------------------------------------------*/
 
-.embed-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
-    overflow: hidden;
-    max-width: 100%;
-    object,
-    embed,
-    iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+#typeSettings {
+    .embed-container {
+        position: relative;
+        padding-bottom: 56.25%;
+        height: 0;
+        overflow: hidden;
+        max-width: 100%;
+        object,
+        embed,
+        iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
     }
 }
