--- a/app/styles/03-Modules/_TypeSettings.scss
+++ b/app/styles/03-Modules/_TypeSettings.scss
@@ -121,7 +121,7 @@ $active-border-color: $primary;
         margin: 0 0.5rem 0;
         display: block;
         float: left;
-        min-width: 200px;
+        //min-width: 200px;
         &--full {
             width: calc(100% - 1rem);
         }
@@ -150,7 +150,7 @@ $active-border-color: $primary;
             span {
                 position: absolute;
                 right: 1rem;
-                bottom: 3rem;
+                bottom: 1.5rem;
                 font-size: 1.8rem;
                 color: #A0A4AD;
                 font-weight: 400 !important;
@@ -160,10 +160,11 @@ $active-border-color: $primary;
             display: none;
         }
         &__select {
-            margin-top: 0;
+            margin-top: 6px;
+            margin-bottom: 7px;
             &:after {
                 right: 2rem;
-                bottom: 3rem;
+                bottom: 1.3rem;
             }
             select {
                 padding: 2.4rem 3rem 0.7rem 0.8rem;
