--- a/app/styles/03-Modules/_TypeSettings.scss
+++ b/app/styles/03-Modules/_TypeSettings.scss
@@ -12,7 +12,7 @@ $active-border-color: $primary;
 }
 
 #typeSettings.visible + .pageWrap {
-    width: calc(100% - 239px);
+    width: calc(100% - 359px);
     @include media($xl) {
         width: calc(100% - 439px);
     }
@@ -25,7 +25,7 @@ $active-border-color: $primary;
 }
 
 #typeSettings {
-    width: 240px;
+    width: 360px;
     @include media($xl) {
         width: 440px;
     }
@@ -33,20 +33,19 @@ $active-border-color: $primary;
     transform: translateX(-100%);
     &.visible {
         transform: translateX(0);
-        box-shadow: $z4;
+        box-shadow: $z5;
     }
-
     .js-collapsible {
-        .fa {
+        position: relative;
+        svg {
             transition: all 330ms $transition-standard;
         }
         &.expanded {
-            .fa {
-                transform: rotate(0) !important;
+            svg {
+                transform: rotate(-180deg) translateY(50%) !important;
             }
         }
     }
-
     .collapsible {
         backface-visibility: hidden;
         position: relative;
@@ -65,22 +64,19 @@ $active-border-color: $primary;
 
     .headingWrap {
         position: relative;
+        margin-bottom: 0.4rem;
         h6 {
             cursor: pointer;
-            background: rgba($grey-light, 0.2);
-            color: $black-mid;
+            background-image: linear-gradient(to right, $primary 0%, rgba($primary, 0.7) 100%);
+            color: white;
             padding: 1.2rem;
             margin-bottom: 0;
-            @include light;
+            @include normal;
             font-size: 1.6rem;
         }
-        .fa {
-            float: right;
-            right: 2rem;
-            font-size: 2.5rem;
-            margin-top: -0rem;
-            color: $primary;
-            transform: rotate(-90deg);
+        svg {
+            @include vertical-align;
+            right: 1rem;
         }
     }
 
@@ -89,20 +85,22 @@ $active-border-color: $primary;
         left: 0;
         top: 0;
         bottom: 0;
-        background: $white;
+        background-image: linear-gradient(to bottom, #fff 0%, #ebebeb 100%);
         z-index: 9;
         .type-settings__header {
-            color: $text;
-            box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.1);
             padding: 1rem 1rem 0.1rem;
+            background-image: linear-gradient(to top, #fff 0%, #ebebeb 100%);
             h5 {
-                @include bold;
-                font-size: 2rem;
+                color: $primary;
+                text-align: center;
+                @include light;
+                font-size: 3rem;
+                margin: 0;
             }
         }
         .scroll-wrap {
             position: absolute;
-            top: 5.5rem;
+            top: 3.5rem;
             right: 0;
             bottom: 0;
             left: 0;
@@ -132,7 +130,7 @@ $active-border-color: $primary;
             background: white;
             padding: 2.4rem 5rem 0.7rem 0.8rem;
             border: 1px solid $border-color;
-            margin-bottom: 0.7rem;
+            margin-bottom: 0.3rem;
             outline: none;
             font-size: 18px;
             font-weight: 400;
