--- a/app/styles/02-Elements/_Buttons.scss
+++ b/app/styles/02-Elements/_Buttons.scss
@@ -8,19 +8,22 @@ $error-button-color: $red-dark;
 
 #typeSettings {
     .button {
-        color: $white;
-        background: $button-color;
-        border: 2px solid $button-color;
+        overflow: hidden;
+        color: $button-color;
+        background: transparent;
+        border: 1px solid $button-color;
         @include font(p);
+        @include bold;
         margin: 0.6rem 0 2rem;
-        border-radius: 0.3rem;
+        border-radius: 0;
         padding: 0.8em 2.4em;
         cursor: pointer;
         outline: none;
         transition: all 120ms $transition-standard;
-        @include active {
+        &:hover {
             background: lighten($button-color, 4%);
             border-color: lighten($button-color, 4%);
+            color: #ffffff;
         }
         &__outline {
             background: transparent;
